force-app/main/default/objects/Indigo_Commodity_Master__c/Indigo_Commodity_Master__c.object-meta.xml
<CustomObject>
    <label>Indigo Commodity Master</label>
    <nameField>
        <label>Indigo Commodity Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Indigo Commodity Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>