force-app/main/default/objects/Indigo_Commodity_Master__c/fields/Commodity_Code__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Code__c</fullName>
    <label>Commodity Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>