force-app/main/default/objects/Indigo_Commodity_Master__c/fields/SHC_Code__c.field-meta.xml
<CustomField>
    <fullName>SHC_Code__c</fullName>
    <label>SHC Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>