force-app/main/default/objects/Indigo_Commodity_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Commodity_Code__c</columns>
    <columns>Commodity_Description__c</columns>
    <columns>SHC_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>